[metadata]
name = cursed-for
version = 0.1.0
description = Implementing C-style for loops in the Python REPL.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/cursed-for
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
# install_requires =
#     django>=3.2
#     zxpy>=1.4.4
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    cursed-for=cursed_for:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
    pytest-cov
    tox

[options.package_data]
sample_package =
	py.typed

[tool:pytest]
addopts = --cov --cov-report=term-missing
